Bug 243381 - [IFC][Integration] Call isFloating() instead of isInline() to check for supported table content
Summary: [IFC][Integration] Call isFloating() instead of isInline() to check for suppo...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-07-30 21:05 PDT by zalan
Modified: 2022-07-31 15:23 PDT (History)
5 users (show)

See Also:


Attachments
[fast-cq]Patch (1.35 KB, patch)
2022-07-30 21:07 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2022-07-30 21:05:35 PDT
ssia
Comment 1 zalan 2022-07-30 21:07:36 PDT
Created attachment 461321 [details]
[fast-cq]Patch
Comment 2 EWS 2022-07-31 15:21:26 PDT
Committed 252985@main (ffb68946eb79): <https://commits.webkit.org/252985@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 461321 [details].
Comment 3 Radar WebKit Bug Importer 2022-07-31 15:23:01 PDT
<rdar://problem/97880519>