[IFC][Integration] Call isFloating() instead of isInline() to check for supported table content https://bugs.webkit.org/show_bug.cgi?id=243381

Reviewed by Antti Koivisto.

This is what we check against on other boxes.

* Source/WebCore/layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::canUseForChild):

Canonical link: https://commits.webkit.org/252985@main